fix: keep asset cache compatible with minSdk 26